--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
     <string name="home_fragment_label">Home Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
+    <string name="detail_fragment_label">Detail Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
@@ -46,4 +46,19 @@
     <string name="no_internet">No Internet Connection</string>
     <string name="no_results">No result</string>
     <string name="retry_button">Retry</string>
+    <string name="txt_address">Address</string>
+    <string name="txt_open_time">Open Time</string>
+    <string name="txt_last_updated_time">Last Updated Time</string>
+    <string name="txt_official_site">Official Site</string>
+    <string name="txt_loading">Loading…</string>
+    <string name="action_language">Language</string>
+    <string name="lang_en">English</string>
+    <string name="lang_zh_tw">Traditional Chinese</string>
+    <string name="lang_zh_cn">Simplified Chinese</string>
+    <string name="lang_ja">Japan</string>
+    <string name="lang_es">Spanish</string>
+    <string name="lang_id">Indonesian</string>
+    <string name="lang_ko">Korean</string>
+    <string name="lang_th">Thai</string>
+    <string name="lang_vi">Vietnamese</string>
 </resources>
